force-app/main/default/objects/Functional_Model__c/Functional_Model__c.object-meta.xml
<CustomObject>
    <label>Functional Model</label>
    <nameField>
        <label>Functional Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>