force-app/main/default/objects/Functional_Model__c/fields/Deck_Link__c.field-meta.xml
<CustomField>
    <fullName>Deck_Link__c</fullName>
    <label>Link to Deck</label>
    <type>Url</type>
</CustomField>