force-app/main/default/objects/Functional_Model__c/fields/Experimental_Plan__c.field-meta.xml
<CustomField>
    <fullName>Experimental_Plan__c</fullName>
    <label>Experimental Plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Sensitizer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>