force-app/main/default/objects/Functional_Model__c/fields/Gene__c.field-meta.xml
<CustomField>
    <fullName>Gene__c</fullName>
    <label>Gene</label>
    <length>200</length>
    <type>Text</type>
</CustomField>