force-app/main/default/objects/Functional_Model__c/fields/MAID__c.field-meta.xml
<CustomField>
    <fullName>MAID__c</fullName>
    <label>MAID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>