force-app/main/default/objects/Functional_Model__c/fields/Modeling_Lead__c.field-meta.xml
<CustomField>
    <fullName>Modeling_Lead__c</fullName>
    <label>Modeling Lead</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Baik</fullName>
            </value>
            <value>
                <fullName>Ann-Hwee Lee</fullName>
            </value>
            <value>
                <fullName>Aris Economides</fullName>
            </value>
            <value>
                <fullName>Asiel Benitez</fullName>
            </value>
            <value>
                <fullName>Dan Chalothorn</fullName>
            </value>
            <value>
                <fullName>Elias Pavlopoulos</fullName>
            </value>
            <value>
                <fullName>FM (Kiran)</fullName>
            </value>
            <value>
                <fullName>For collaborator</fullName>
            </value>
            <value>
                <fullName>Gaurang Patel</fullName>
            </value>
            <value>
                <fullName>Giusy Della Gatta</fullName>
            </value>
            <value>
                <fullName>Jamie Orengo</fullName>
            </value>
            <value>
                <fullName>Judith Altarejos</fullName>
            </value>
            <value>
                <fullName>Kalyan Nannuru</fullName>
            </value>
            <value>
                <fullName>Kate Cygnar</fullName>
            </value>
            <value>
                <fullName>Kiran Nistala</fullName>
            </value>
            <value>
                <fullName>Kishor</fullName>
            </value>
            <value>
                <fullName>Kristen Howell</fullName>
            </value>
            <value>
                <fullName>Lori Khrimian</fullName>
            </value>
            <value>
                <fullName>Matt Sleeman</fullName>
            </value>
            <value>
                <fullName>Meghan Drummond</fullName>
            </value>
            <value>
                <fullName>Michael Dunn</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Nick Gale</fullName>
            </value>
            <value>
                <fullName>Nicole Alessandri-Haber</fullName>
            </value>
            <value>
                <fullName>Scott MacDonell</fullName>
            </value>
            <value>
                <fullName>Shek Man Chim</fullName>
            </value>
            <value>
                <fullName>Silvia Smaldone</fullName>
            </value>
            <value>
                <fullName>Sokol Haxhinasto</fullName>
            </value>
            <value>
                <fullName>Soo Min (M&amp;M)</fullName>
            </value>
            <value>
                <fullName>Valerio Donato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>