force-app/main/default/objects/Functional_Model__c/fields/Mouse_Model__c.field-meta.xml
<CustomField>
    <fullName>Mouse_Model__c</fullName>
    <label>Mouse Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>