force-app/main/default/objects/Functional_Model__c/fields/Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Phenotype__c</fullName>
    <label>Phenotype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Autoimmune Disease</fullName>
            </value>
            <value>
                <fullName>Blood Pressure</fullName>
            </value>
            <value>
                <fullName>Brain Malformations</fullName>
            </value>
            <value>
                <fullName>CADASIL</fullName>
            </value>
            <value>
                <fullName>Cardiomyopathy</fullName>
            </value>
            <value>
                <fullName>Cartilage loss</fullName>
            </value>
            <value>
                <fullName>Chronic Liver Disease</fullName>
            </value>
            <value>
                <fullName>Chronic Obstructive Pulmonary Disease</fullName>
            </value>
            <value>
                <fullName>Cognition</fullName>
            </value>
            <value>
                <fullName>COPD</fullName>
            </value>
            <value>
                <fullName>COPD, mucus clearance</fullName>
            </value>
            <value>
                <fullName>Coronary Artery Disease</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>eBMD</fullName>
            </value>
            <value>
                <fullName>Energy expenditure</fullName>
            </value>
            <value>
                <fullName>Fibromyalgia</fullName>
            </value>
            <value>
                <fullName>Glaucoma</fullName>
            </value>
            <value>
                <fullName>Glycemic traits</fullName>
            </value>
            <value>
                <fullName>Hearing loss</fullName>
            </value>
            <value>
                <fullName>Height and Muscle Mass</fullName>
            </value>
            <value>
                <fullName>Hypothyroidism</fullName>
            </value>
            <value>
                <fullName>IBD</fullName>
            </value>
            <value>
                <fullName>Kidney and Liver Function</fullName>
            </value>
            <value>
                <fullName>LDL Cholesterol</fullName>
            </value>
            <value>
                <fullName>Liver Disease</fullName>
            </value>
            <value>
                <fullName>Nasal Polyps</fullName>
            </value>
            <value>
                <fullName>Neurodevelopmental Disorder</fullName>
            </value>
            <value>
                <fullName>Obesity</fullName>
            </value>
            <value>
                <fullName>Obesity (protection)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>