force-app/main/default/objects/Functional_Model__c/fields/RGC_Analyst__c.field-meta.xml
<CustomField>
    <fullName>RGC_Analyst__c</fullName>
    <label>RGC Analyst</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alan Shuldiner</fullName>
            </value>
            <value>
                <fullName>Alessandro Di Gioia</fullName>
            </value>
            <value>
                <fullName>Claudia Gonzaga-Jauregui</fullName>
            </value>
            <value>
                <fullName>Cris Van Hout</fullName>
            </value>
            <value>
                <fullName>Harikiran Nistala</fullName>
            </value>
            <value>
                <fullName>Jan Freudenberg</fullName>
            </value>
            <value>
                <fullName>Jonas Bovjin</fullName>
            </value>
            <value>
                <fullName>Joshua Backman</fullName>
            </value>
            <value>
                <fullName>Juan Rodriguez-Flores</fullName>
            </value>
            <value>
                <fullName>Julie Horowitz</fullName>
            </value>
            <value>
                <fullName>Katherine Siminovich</fullName>
            </value>
            <value>
                <fullName>Kavita Praveen</fullName>
            </value>
            <value>
                <fullName>Luca Lotta</fullName>
            </value>
            <value>
                <fullName>Manuel Ferreira</fullName>
            </value>
            <value>
                <fullName>Nehal</fullName>
            </value>
            <value>
                <fullName>Niek Verweig</fullName>
            </value>
            <value>
                <fullName>Olu Sosna</fullName>
            </value>
            <value>
                <fullName>Parsa Akbari</fullName>
            </value>
            <value>
                <fullName>Shane McCarthy</fullName>
            </value>
            <value>
                <fullName>Shannon Bruse</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>