force-app/main/default/objects/Functional_Model__c/fields/RGC_Biology_In_vitro_Focus__c.field-meta.xml
<CustomField>
    <fullName>RGC_Biology_In_vitro_Focus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGC Biology In vitro Focus</label>
    <type>Checkbox</type>
</CustomField>