force-app/main/default/objects/Functional_Model__c/fields/RGC_Biology_Leading__c.field-meta.xml
<CustomField>
    <fullName>RGC_Biology_Leading__c</fullName>
    <label>RGC Biology Leading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Co-Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>