force-app/main/default/objects/Functional_Model__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allele Generation</fullName>
            </value>
            <value>
                <fullName>Cataloged</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Microinjection</fullName>
            </value>
            <value>
                <fullName>Mouse Production</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Phenotyping</fullName>
            </value>
            <value>
                <fullName>Phenotyping - External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>