force-app/main/default/objects/Functional_Model__c/fields/TAG_Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>TAG_Sub_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Sub-Project</label>
    <referenceTo>TAG_Sub_Project__c</referenceTo>
    <relationshipLabel>Functional Models</relationshipLabel>
    <relationshipName>Functional_Models</relationshipName>
    <type>Lookup</type>
</CustomField>