force-app/main/default/objects/Functional_Model__c/fields/TFA__c.field-meta.xml
<CustomField>
    <fullName>TFA__c</fullName>
    <label>TFA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>I&amp;I</fullName>
            </value>
            <value>
                <fullName>M&amp;M</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Ophth</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>