force-app/main/default/objects/Functional_Model__c/fields/Tier_1__c.field-meta.xml
<CustomField>
    <fullName>Tier_1__c</fullName>
    <label>Tier 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Q 2023</fullName>
            </value>
            <value>
                <fullName>2Q 2022</fullName>
            </value>
            <value>
                <fullName>2Q 2023</fullName>
            </value>
            <value>
                <fullName>3Q 2022</fullName>
            </value>
            <value>
                <fullName>4Q 2022</fullName>
            </value>
            <value>
                <fullName>Deck</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Q3/2022</fullName>
                <isActive>false</isActive>
                <label>Q3/2022</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>