force-app/main/default/objects/Functional_Model__c/fields/Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Tier_2__c</fullName>
    <label>Tier 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Deck</fullName>
            </value>
            <value>
                <fullName>Deck Feb2022</fullName>
            </value>
            <value>
                <fullName>For externnal</fullName>
            </value>
            <value>
                <fullName>Manuscript</fullName>
            </value>
            <value>
                <fullName>NYMC Data</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>