force-app/main/default/objects/Functional_Model__c/validationRules/Year_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Date_Range</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    VALUE(Year__c) &lt; 2000,
    VALUE(Year__c) &gt; 2200
)</errorConditionFormula>
    <errorMessage>Please enter a valid Year.</errorMessage>
</ValidationRule>