force-app/main/default/objects/Functional_Model__c/validationRules/Year_Limitations.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Limitations</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Year__c))
&amp;&amp;
OR(
NOT(ISNUMBER( Year__c )),
LEN(Year__c) &lt;&gt; 4
)</errorConditionFormula>
    <errorMessage>Please enter a valid Year. (4 digits)</errorMessage>
</ValidationRule>