force-app/main/default/objects/Functional_Model__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gene__c</columns>
    <columns>Mouse_Model__c</columns>
    <columns>Phenotype__c</columns>
    <columns>Tier_1__c</columns>
    <columns>Stage__c</columns>
    <columns>TAG_Sub_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>