force-app/main/default/objects/Functional_Model__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Gene__c</columns>
    <columns>TAG_Sub_Project__c</columns>
    <columns>Outcomes__c</columns>
    <columns>Phenotype__c</columns>
    <columns>RGC_Analyst__c</columns>
    <columns>TFA__c</columns>
    <columns>Deck_Link__c</columns>
    <columns>Mouse_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>